# erosion-simulation

./: .gitignore  README.md
godot/: export_presets.cfg  height_shader.gdshader  main.tscn  my-extension.gdextension  output.exr  physics_button_start.gd  physics_button_stop.gd  project.godot  terrain_texture.exr  wall_material.tres  water_shader.gdshader
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  raindrop.rs  terrain_mesh.rs
